--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -236,7 +236,7 @@ header .entry-meta {
 }
 .read-more-header {
 	position: absolute;
-	top: -20px;
+	bottom: -20px;
 	left: 0;
 	right: 0;
 	height: 35px;
