--- a/assets/partials/_syntax.scss
+++ b/assets/partials/_syntax.scss
@@ -1,14 +1,15 @@
-.highlight { background: #fff; border: 1px solid $grey-color-lightest; padding: 30px;
+.highlight { background: #393b3a; border: 0px solid $grey-color-lightest; padding: 20px;
 	.lineno { padding: 0 15px 0 0; }
 	.highlighter-rouge & { background: #eef; }
-	.c     { color: #998; font-style: italic } // Comment
+	.c     { color: #637bab; font-style: italic } // Comment
 	.err   { color: #a61717; background-color: #e3d2d2 } // Error
 	.k     { font-weight: bold } // Keyword
-	.o     { font-weight: bold } // Operator
+	.o     { color: #00b4ff; font-weight: bold } // Operator
 	.cm    { color: #998; font-style: italic } // Comment.Multiline
 	.cp    { color: #999; font-weight: bold } // Comment.Preproc
-	.c1    { color: #998; font-style: italic } // Comment.Single
+	.c1    { color: #667fb1; font-style: italic } // Comment.Single
 	.cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
+	.p     { color: #bfc4d9 }
 	.gd    { color: #000; background-color: #fdd } // Generic.Deleted
 	.gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
 	.ge    { font-style: italic } // Generic.Emph
@@ -21,28 +22,31 @@
 	.gs    { font-weight: bold } // Generic.Strong
 	.gu    { color: #aaa } // Generic.Subheading
 	.gt    { color: #a00 } // Generic.Traceback
+	.k     { color: #4cb2ff }
 	.kc    { font-weight: bold } // Keyword.Constant
 	.kd    { font-weight: bold } // Keyword.Declaration
+	.kn    { color: #4cb2ff }
 	.kp    { font-weight: bold } // Keyword.Pseudo
 	.kr    { font-weight: bold } // Keyword.Reserved
 	.kt    { color: #458; font-weight: bold } // Keyword.Type
 	.m     { color: #099 } // Literal.Number
-	.s     { color: #d14 } // Literal.String
-	.na    { color: #008080 } // Name.Attribute
-	.nb    { color: #0086B3 } // Name.Builtin
+	.s     { color: #5eb181 } // Literal.String
+	.na    { color: #bfc4d9 } // Name.Attribute
+	.nb    { color: #bfc4d9 } // Name.Builtin
 	.nc    { color: #458; font-weight: bold } // Name.Class
-	.no    { color: #008080 } // Name.Constant
-	.ni    { color: #800080 } // Name.Entity
+	.no    { color: #bfc4d9 } // Name.Constant
+	.ni    { color: #bfc4d9 } // Name.Entity
 	.ne    { color: #900; font-weight: bold } // Name.Exception
-	.nf    { color: #900; font-weight: bold } // Name.Function
-	.nn    { color: #555 } // Name.Namespace
-	.nt    { color: #000080 } // Name.Tag
-	.nv    { color: #008080 } // Name.Variable
+	.nf    { color: #ffec8e; font-weight: bold } // Name.Function
+	.nn    { color: #bfc4d9 } // Name.Namespace
+	.nt    { color: #bfc4d9 } // Name.Tag
+	.nv    { color: #bfc4d9 } // Name.Variable
 	.ow    { font-weight: bold } // Operator.Word
 	.w     { color: #bbb } // Text.Whitespace
+	.n    { color: #bfc4d9 } // Literal.Number.Float
 	.mf    { color: #099 } // Literal.Number.Float
 	.mh    { color: #099 } // Literal.Number.Hex
-	.mi    { color: #099 } // Literal.Number.Integer
+	.mi    { color: #00b4ff } // Literal.Number.Integer
 	.mo    { color: #099 } // Literal.Number.Oct
 	.sb    { color: #d14 } // Literal.String.Backtick
 	.sc    { color: #d14 } // Literal.String.Char
@@ -56,8 +60,8 @@
 	.s1    { color: #d14 } // Literal.String.Single
 	.ss    { color: #990073 } // Literal.String.Symbol
 	.bp    { color: #999 } // Name.Builtin.Pseudo
-	.vc    { color: #008080 } // Name.Variable.Class
-	.vg    { color: #008080 } // Name.Variable.Global
-	.vi    { color: #008080 } // Name.Variable.Instance
+	.vc    { color: #bfc4d9 } // Name.Variable.Class
+	.vg    { color: #bfc4d9 } // Name.Variable.Global
+	.vi    { color: #bfc4d9 } // Name.Variable.Instance
 	.il    { color: #099 } // Literal.Number.Integer.Long
 }
