--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -192,6 +192,45 @@
 	}
 }
 
+.dataframe {
+	margin: 20px 0px;
+}
+
+table {
+  border: 1px solid #fcfcfc;
+	background-color: #f1f1f1;
+  width: 100%;
+  height: 100%;
+  text-align: left;
+  border-collapse: collapse;
+
+}
+table td, th {
+  border: 1px solid #f5f5f5;
+  padding: 4px 4px;
+}
+
+table {
+  font-size: 11px;
+}
+
+table tr:hover {
+	background-color: #dae6ef;
+}
+
+table thead th {
+	border: 0px solid #f5f5f5;
+  font-size: 12px;
+  font-weight: bold;
+  color: #bfc4d9;
+  text-align: left;
+	background-color: #333333;
+}
+table thead th:first-child {
+  border-left: none;
+}
+
+
 .not-found { text-align: center;
 	&.post { padding: 40px; font-size: 16px; }
 }
