--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -96,11 +96,25 @@
 			}
 		}
 
-		.post-content { font-size: 16px; line-height: 26px;
-			abbr { border-bottom: 1px dotted $grey-color-normal; text-decoration: none; cursor: help; }
-			code, kbd, pre { margin: 0; font-family: monospace; word-wrap: break-word; word-break: break-word; white-space: pre-wrap; }
+		.post-content {
+			div {
+				overflow-x:auto;
+			}
+
+			font-size: 16px; line-height: 26px;
+			abbr {
+				border-bottom: 1px dotted $grey-color-normal;
+				text-decoration: none; cursor: help;
+			}
+
+			code, kbd, pre {
+				margin: 0; font-family: monospace; word-wrap: break-word; word-break: break-word; white-space: pre-wrap;
+			}
+
 			address, cite, var { font-style: italic; }
-			blockquote { margin: 40px 0; padding-left: 30px; font-style: italic; border-left: 3px solid $grey-color-light; }
+
+			blockquote {
+				margin: 40px 0; padding-left: 30px; font-style: italic; border-left: 3px solid $grey-color-light; }
 
 			em, strong { color: $grey-color-dark; }
 
@@ -194,13 +208,9 @@
 
 .dataframe {
 	margin: 20px 0px;
-}
-
-table {
   border: 1px solid #fcfcfc;
 	background-color: #f1f1f1;
   width: 100%;
-  height: 100%;
   text-align: left;
   border-collapse: collapse;
 
