new: Reduced font size for code

--- a/assets/partials/_syntax.scss
+++ b/assets/partials/_syntax.scss
@@ -1,4 +1,4 @@
-.highlight { background: #393b3a; border: 0px solid $grey-color-lightest; padding: 20px;
+.highlight { background: #393b3a; border: 0px solid $grey-color-lightest; padding: 15px 20px; font-size: 12px; line-height: 20px; overflow-x: auto;
 	.lineno { padding: 0 15px 0 0; }
 	.highlighter-rouge & { background: #eef; }
 	.c     { color: #637bab; font-style: italic } // Comment
