new: Implement Google Tag Manager

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,14 @@
     {% include head.html %}
 
     <body>
+
+        {% if site.tagmanager_code != null %}
+            <!-- Google Tag Manager (noscript) -->
+            <noscript><iframe src="https://www.googletagmanager.com/ns.html?id='{{site.tagmanager_code}}'"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+            <!-- End Google Tag Manager (noscript) -->
+        {% endif %}
+        
         <div class="wrapper">
             {% include sidebar.html %}
 
