new: auto adjust width

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -241,6 +241,10 @@ table thead th:first-child {
   border-left: none;
 }
 
+#teleprompt {
+	font-size: 10px;
+}
+
 
 .not-found { text-align: center;
 	&.post { padding: 40px; font-size: 16px; }
