--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,12 @@
             height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <!-- End Google Tag Manager (noscript) -->
         {% endif %}
-        
+
         <div class="wrapper">
             {% include sidebar.html %}
 
             <main class="the-content" role="main">
-                {% include search.html %}
+                <!-- {% include search.html %} -->
                 {{ content }}
             </main>
         </div>
