--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ layout: default
         {% endif %}
     </footer>
 </article>
-
+<!-- 
 {% if page.comments and site.show_comments == 1 %}
 <aside class="comments" role="complementary">
     <div id="disqus_thread"></div>
@@ -60,4 +60,4 @@ layout: default
         })();
     </script>
 </aside>
-{% endif %}
+{% endif %} -->
