new: output code font orange

--- a/assets/partials/_vars.scss
+++ b/assets/partials/_vars.scss
@@ -9,6 +9,7 @@ $grey-color-normal: 	#666;
 $grey-color-light: 		#aaa;
 $grey-color-lighter: 	#ddd;
 $grey-color-lightest: 	#eee;
+$grey-color-output: 	orange;
 
 $primary-color:			#5da6f0;
 
