--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -99,7 +99,6 @@
 		.post-content {
 			div {
 				overflow-x: auto;
-
 			}
 
 			font-size: 16px; line-height: 26px;
@@ -109,7 +108,7 @@
 			}
 
 			code, kbd, pre {
-				margin: 0; font-family: monospace; word-wrap: break-word; word-break: break-word; white-space: pre-wrap;
+				margin: 0; font-family: monospace; word-wrap: break-word; word-break: break-word; white-space: pre-wrap; color: $grey-color-output;
 			}
 
 			address, cite, var { font-style: italic; }
@@ -251,7 +250,3 @@ table thead th:first-child {
 }
 
 @import "responsive";
-
-.highlighter-rouge {
-	font-size:30px;
-}
